--- a/src/main/resources/com/vhark/grocerystore/view/logInPage.fxml
+++ b/src/main/resources/com/vhark/grocerystore/view/logInPage.fxml
@@ -8,14 +8,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="900.0" style="-fx-background-color: #232946;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="900.0" style="-fx-background-color: #232946;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vhark.grocerystore.controller.LogInController">
    <AnchorPane layoutX="552.0" prefHeight="550.0" prefWidth="347.0" style="-fx-background-color: #121629;">
-      <Label layoutX="106.0" layoutY="135.0" text="Log In" textFill="#fffffe">
+      <Label layoutX="106.0" layoutY="153.0" text="Log In" textFill="#fffffe">
          <font>
             <Font name="Arial Black" size="40.0" />
          </font>
       </Label>
-      <Button alignment="CENTER" layoutX="116.0" layoutY="347.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="113.0" style="-fx-background-color: #eebbc3; -fx-background-radius: 10; -fx-background-insets: 0;" text="Log In" textAlignment="CENTER" textFill="#232946">
+      <Button fx:id="logInButton" alignment="CENTER" layoutX="116.0" layoutY="334.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="113.0" style="-fx-background-color: #eebbc3; -fx-background-radius: 10; -fx-background-insets: 0;" text="Log In" textAlignment="CENTER" textFill="#232946">
          <font>
             <Font name="Arial Black" size="12.0" />
          </font>
@@ -23,12 +23,12 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <TextField layoutX="49.0" layoutY="227.0" prefHeight="26.0" prefWidth="249.0" promptText="Enter your identification code" style="-fx-border-radius: 10; -fx-border-color: #b8c1ec; -fx-background-color: transparent; -fx-text-fill: #fffffe;">
+      <TextField fx:id="logInIdCodeField" layoutX="49.0" layoutY="238.0" prefHeight="26.0" prefWidth="249.0" promptText="Enter your identification code" style="-fx-border-radius: 10; -fx-border-color: #b8c1ec; -fx-background-color: transparent; -fx-text-fill: #fffffe;">
          <cursor>
             <Cursor fx:constant="TEXT" />
          </cursor>
       </TextField>
-      <PasswordField layoutX="48.0" layoutY="286.0" prefHeight="26.0" prefWidth="250.0" promptText="Enter your password" style="-fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: #b8c1ec; -fx-text-fill: #fffffe;">
+      <PasswordField fx:id="logInPasswordField" layoutX="48.0" layoutY="279.0" prefHeight="26.0" prefWidth="250.0" promptText="Enter your password" style="-fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: #b8c1ec; -fx-text-fill: #fffffe;">
          <font>
             <Font name="Arial" size="12.0" />
          </font>
@@ -36,12 +36,12 @@
             <Cursor fx:constant="TEXT" />
          </cursor>
       </PasswordField>
-      <Label layoutX="75.0" layoutY="399.0" text="Don't have an account yet?" textAlignment="CENTER" textFill="#fffffe">
+      <Label layoutX="75.0" layoutY="381.0" text="Don't have an account yet?" textAlignment="CENTER" textFill="#fffffe">
          <font>
             <Font name="Arial" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="223.0" layoutY="399.0" text="Sign Up" textAlignment="CENTER" textFill="#b8c1ec" underline="true">
+      <Label fx:id="logInLabelSwitchToSignUp" layoutX="223.0" layoutY="381.0" text="Sign Up" textAlignment="CENTER" textFill="#b8c1ec" underline="true">
          <font>
             <Font name="Arial" size="12.0" />
          </font>
@@ -50,9 +50,9 @@
          </cursor>
       </Label>
    </AnchorPane>
-   <Label alignment="TOP_LEFT" layoutX="133.0" layoutY="113.0" prefHeight="178.0" prefWidth="338.0" text="Grocery Store" textFill="#fffffe" wrapText="true">
+   <Label alignment="TOP_LEFT" layoutX="77.0" layoutY="141.0" prefHeight="268.0" prefWidth="410.0" text="Grocery Store" textFill="#fffffe" wrapText="true">
       <font>
-         <Font name="Arial Black" size="60.0" />
+         <Font name="Arial Black" size="90.0" />
       </font>
    </Label>
 </AnchorPane>
