--- a/src/main/resources/com/vhark/grocerystore/view/logInPage.fxml
+++ b/src/main/resources/com/vhark/grocerystore/view/logInPage.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="900.0" style="-fx-background-color: #232946;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vhark.grocerystore.controller.LogInController">
-   <AnchorPane layoutX="552.0" prefHeight="550.0" prefWidth="347.0" style="-fx-background-color: #121629;">
+   <AnchorPane layoutX="552.0" layoutY="-1.0" prefHeight="550.0" prefWidth="347.0" style="-fx-background-color: #121629;">
       <Label layoutX="106.0" layoutY="153.0" text="Log In" textFill="#fffffe">
          <font>
             <Font name="Arial Black" size="40.0" />
