--- a/src/main/resources/com/vhark/grocerystore/view/signUpPage.fxml
+++ b/src/main/resources/com/vhark/grocerystore/view/signUpPage.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="900.0" style="-fx-background-color: #232946;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vhark.grocerystore.controller.signUpController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="900.0" style="-fx-background-color: #232946;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vhark.grocerystore.controller.SignUpController">
     <AnchorPane layoutX="552.0" prefHeight="550.0" prefWidth="347.0" style="-fx-background-color: #121629;">
         <Label layoutX="88.0" layoutY="56.0" text="Sign Up" textFill="#fffffe">
             <font>
