--- a/src/main/resources/com/vhark/grocerystore/view/store.fxml
+++ b/src/main/resources/com/vhark/grocerystore/view/store.fxml
@@ -1,14 +1,238 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
-
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="900.0" style="-fx-background-color: #232946;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vhark.grocerystore.controller.StoreController">
+   <TabPane prefHeight="550.0" prefWidth="900.0" stylesheets="@../style/tabStyle.css" tabClosingPolicy="UNAVAILABLE">
+     <tabs>
+       <Tab fx:id="storeMarketTabButton" text="Market">
+         <content>
+           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                  <children>
+                     <VBox prefHeight="528.0" prefWidth="192.0" style="-fx-background-color: #4b5a90;">
+                        <children>
+                           <Label alignment="TOP_LEFT" prefHeight="17.0" prefWidth="242.0" text="Search" textAlignment="CENTER" textFill="#fffffe">
+                              <font>
+                                 <Font name="Arial" size="12.0" />
+                              </font>
+                              <VBox.margin>
+                                 <Insets bottom="4.0" left="5.0" right="10.0" top="10.0" />
+                              </VBox.margin>
+                           </Label>
+                           <TextField fx:id="storeMarketSearchField" style="-fx-border-radius: 5; -fx-border-color: #b8c1ec; -fx-background-color: transparent; -fx-text-fill: #fffffe;">
+                              <VBox.margin>
+                                 <Insets left="5.0" right="5.0" />
+                              </VBox.margin>
+                              <cursor>
+                                 <Cursor fx:constant="TEXT" />
+                              </cursor>
+                           </TextField>
+                           <Separator prefWidth="200.0" style="-fx-background-color: #b8c1ec;">
+                              <VBox.margin>
+                                 <Insets bottom="5.0" top="7.0" />
+                              </VBox.margin>
+                           </Separator>
+                           <Label alignment="TOP_LEFT" prefHeight="17.0" prefWidth="207.0" text="Max price" textAlignment="CENTER" textFill="#fffffe">
+                              <font>
+                                 <Font name="Arial" size="12.0" />
+                              </font>
+                              <VBox.margin>
+                                 <Insets bottom="4.0" left="5.0" right="10.0" />
+                              </VBox.margin>
+                           </Label>
+                           <Label fx:id="storeMarketMaxPriceLabel" alignment="TOP_LEFT" prefHeight="17.0" prefWidth="203.0" text="No limit" textAlignment="CENTER" textFill="#fffffe">
+                              <font>
+                                 <Font name="Arial" size="12.0" />
+                              </font>
+                              <VBox.margin>
+                                 <Insets bottom="4.0" left="5.0" right="10.0" />
+                              </VBox.margin>
+                           </Label>
+                           <Slider fx:id="storeMatketSlider" blockIncrement="1.0" prefHeight="14.0" prefWidth="199.0" style="-fx-background-color: #b8c1ec; -fx-background-radius: 10;">
+                              <VBox.margin>
+                                 <Insets left="5.0" right="5.0" />
+                              </VBox.margin>
+                              <cursor>
+                                 <Cursor fx:constant="HAND" />
+                              </cursor>
+                           </Slider>
+                           <Separator prefWidth="200.0" style="-fx-background-color: #b8c1ec;">
+                              <VBox.margin>
+                                 <Insets bottom="5.0" top="7.0" />
+                              </VBox.margin>
+                           </Separator>
+                           <CheckBox fx:id="storeMarketCheckBoxInStock" alignment="TOP_LEFT" mnemonicParsing="false" prefHeight="17.0" prefWidth="204.0" text="In stock" textAlignment="CENTER" textFill="#fffffe">
+                              <VBox.margin>
+                                 <Insets bottom="4.0" left="5.0" right="10.0" />
+                              </VBox.margin>
+                              <cursor>
+                                 <Cursor fx:constant="HAND" />
+                              </cursor>
+                           </CheckBox>
+                           <CheckBox fx:id="storeMarketCheckBoxOutOfStock" alignment="TOP_LEFT" mnemonicParsing="false" prefHeight="17.0" prefWidth="193.0" text="Out of stock" textAlignment="CENTER" textFill="#fffffe">
+                              <VBox.margin>
+                                 <Insets left="5.0" right="10.0" />
+                              </VBox.margin>
+                              <cursor>
+                                 <Cursor fx:constant="HAND" />
+                              </cursor>
+                           </CheckBox>
+                           <Separator prefWidth="200.0" style="-fx-background-color: #b8c1ec;">
+                              <VBox.margin>
+                                 <Insets bottom="10.0" top="7.0" />
+                              </VBox.margin>
+                           </Separator>
+                           <Button fx:id="storeMarketSearchButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="218.0" style="-fx-background-color: #eebbc3; -fx-background-radius: 5; -fx-background-insets: 0;" text="Search" textFill="#232946">
+                              <VBox.margin>
+                                 <Insets bottom="10.0" left="5.0" right="5.0" />
+                              </VBox.margin>
+                              <font>
+                                 <Font name="Arial Black" size="12.0" />
+                              </font>
+                              <cursor>
+                                 <Cursor fx:constant="HAND" />
+                              </cursor>
+                           </Button>
+                           <Button fx:id="storeMarketReloadButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="218.0" style="-fx-background-color: #ccbbee; -fx-background-radius: 5; -fx-background-insets: 0;" text="Reload" textFill="#232946">
+                              <font>
+                                 <Font name="Arial Black" size="12.0" />
+                              </font>
+                              <cursor>
+                                 <Cursor fx:constant="HAND" />
+                              </cursor>
+                              <VBox.margin>
+                                 <Insets left="5.0" right="5.0" />
+                              </VBox.margin>
+                           </Button>
+                        </children>
+                     </VBox>
+                     <TableView fx:id="storeMarketTableView" layoutX="192.0" prefHeight="528.0" prefWidth="516.0" style="-fx-background-color: #232946; -fx-text-fill: #fffffe; -fx-border-color: #232946;">
+                       <columns>
+                         <TableColumn fx:id="storeMarketNameColumn" maxWidth="316.0" minWidth="316.0" prefWidth="316.0" style="-fx-background-color: #b8c1ec;" text="Name" />
+                         <TableColumn fx:id="storeMarketPriceColumn" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" style="-fx-background-color: #acb6e4;" text="Price" />
+                           <TableColumn fx:id="storeMarketQuantityColumn" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" style="-fx-background-color: #b8c1ec;" text="Quantity" />
+                       </columns>
+                     </TableView>
+                     <VBox layoutX="708.0" prefHeight="525.0" prefWidth="192.0" style="-fx-background-color: #4b5a90;">
+                        <children>
+                           <Label alignment="TOP_LEFT" prefHeight="17.0" prefWidth="242.0" text="No product selected" textAlignment="CENTER" textFill="#fffffe">
+                              <font>
+                                 <Font name="Arial Black" size="12.0" />
+                              </font>
+                              <VBox.margin>
+                                 <Insets bottom="4.0" left="5.0" right="10.0" top="15.0" />
+                              </VBox.margin>
+                           </Label>
+                           <Label alignment="TOP_LEFT" prefHeight="17.0" prefWidth="242.0" text="Enter the number of items" textAlignment="CENTER" textFill="#fffffe">
+                              <font>
+                                 <Font name="Arial" size="12.0" />
+                              </font>
+                              <VBox.margin>
+                                 <Insets bottom="4.0" left="5.0" right="10.0" top="10.0" />
+                              </VBox.margin>
+                           </Label>
+                           <TextField fx:id="storeMarketNumberOfItemsField" style="-fx-border-radius: 5; -fx-border-color: #b8c1ec; -fx-background-color: transparent; -fx-text-fill: #fffffe;">
+                              <cursor>
+                                 <Cursor fx:constant="TEXT" />
+                              </cursor>
+                              <VBox.margin>
+                                 <Insets bottom="4.0" left="5.0" right="5.0" />
+                              </VBox.margin>
+                           </TextField>
+                           <Button fx:id="storeMarketPurchaseButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="218.0" style="-fx-background-color: #eebbc3; -fx-background-radius: 5; -fx-background-insets: 0;" text="Purchase" textFill="#232946">
+                              <font>
+                                 <Font name="Arial Black" size="12.0" />
+                              </font>
+                              <cursor>
+                                 <Cursor fx:constant="HAND" />
+                              </cursor>
+                              <VBox.margin>
+                                 <Insets bottom="4.0" left="5.0" right="5.0" top="10.0" />
+                              </VBox.margin>
+                           </Button>
+                        </children>
+                     </VBox>
+                  </children>
+               </AnchorPane>
+         </content>
+       </Tab>
+       <Tab fx:id="storePurchasesTabButton" text="Purchases">
+         <content>
+           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                  <children>
+                     <VBox prefHeight="528.0" prefWidth="192.0" style="-fx-background-color: #4b5a90;">
+                        <children>
+                           <Label alignment="CENTER" prefHeight="17.0" prefWidth="242.0" text="Your purchases" textAlignment="CENTER" textFill="#fffffe">
+                              <font>
+                                 <Font name="Arial Black" size="12.0" />
+                              </font>
+                              <VBox.margin>
+                                 <Insets left="5.0" right="10.0" top="15.0" />
+                              </VBox.margin>
+                           </Label>
+                           <Separator prefWidth="200.0" style="-fx-background-color: #b8c1ec;">
+                              <VBox.margin>
+                                 <Insets top="7.0" />
+                              </VBox.margin>
+                           </Separator>
+                        </children>
+                     </VBox>
+                     <TableView fx:id="storePurchasesTableView" layoutX="192.0" prefHeight="528.0" prefWidth="516.0" style="-fx-background-color: #232946; -fx-text-fill: #fffffe; -fx-border-color: #232946;">
+                        <columns>
+                           <TableColumn fx:id="storePurchasesNameColumn" maxWidth="246.0" minWidth="246.0" prefWidth="246.0" style="-fx-background-color: #b8c1ec;" text="Name" />
+                           <TableColumn fx:id="storePurchasesPriceColumn" maxWidth="90.0" minWidth="90.0" prefWidth="90.0" style="-fx-background-color: #acb6e4;" text="Total cost" />
+                           <TableColumn fx:id="storePurchasesQuantityColumn" maxWidth="90.0" minWidth="90.0" prefWidth="90.0" style="-fx-background-color: #b8c1ec;" text="Quantity" />
+                           <TableColumn fx:id="storePurchasesDateColumn" maxWidth="90.0" minWidth="90.0" prefWidth="90.0" style="-fx-background-color: #acb6e4;" text="Date" />
+                        </columns>
+                     </TableView>
+                     <VBox layoutX="708.0" prefHeight="525.0" prefWidth="192.0" style="-fx-background-color: #4b5a90;">
+                        <children>
+                           <Button fx:id="storeMarketReloadButton1" mnemonicParsing="false" prefHeight="25.0" prefWidth="218.0" style="-fx-background-color: #ccbbee; -fx-background-radius: 5; -fx-background-insets: 0;" text="Reload" textFill="#232946">
+                              <font>
+                                 <Font name="Arial Black" size="12.0" />
+                              </font>
+                              <cursor>
+                                 <Cursor fx:constant="HAND" />
+                              </cursor>
+                              <VBox.margin>
+                                 <Insets left="5.0" right="5.0" top="10.0" />
+                              </VBox.margin>
+                           </Button>
+                        </children>
+                     </VBox>
+                  </children></AnchorPane>
+         </content>
+       </Tab>
+         <Tab fx:id="storeSettingsTabButton" text="Settings">
+           <content>
+             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                  <children>
+                     <Button fx:id="storeSettingsQuitButton" layoutX="764.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="122.0" style="-fx-background-color: #eebbc3; -fx-background-radius: 5; -fx-background-insets: 0;" text="QUIT" textFill="#232946">
+                        <font>
+                           <Font name="Arial Black" size="12.0" />
+                        </font>
+                        <cursor>
+                           <Cursor fx:constant="HAND" />
+                        </cursor>
+                     </Button>
+                  </children>
+               </AnchorPane>
+           </content>
+         </Tab>
+     </tabs>
+   </TabPane>
 </AnchorPane>
