--- a/src/main/resources/com/vhark/grocerystore/view/store.fxml
+++ b/src/main/resources/com/vhark/grocerystore/view/store.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Slider?>
@@ -25,7 +24,7 @@
                   <children>
                      <VBox prefHeight="528.0" prefWidth="192.0" style="-fx-background-color: #4b5a90;">
                         <children>
-                           <Label alignment="TOP_LEFT" prefHeight="17.0" prefWidth="242.0" text="Search" textAlignment="CENTER" textFill="#fffffe">
+                           <Label alignment="TOP_LEFT" prefHeight="17.0" prefWidth="242.0" text="Product name" textAlignment="CENTER" textFill="#fffffe">
                               <font>
                                  <Font name="Arial" size="12.0" />
                               </font>
@@ -62,7 +61,7 @@
                                  <Insets bottom="4.0" left="5.0" right="10.0" />
                               </VBox.margin>
                            </Label>
-                           <Slider fx:id="storeMatketSlider" blockIncrement="1.0" prefHeight="14.0" prefWidth="199.0" style="-fx-background-color: #b8c1ec; -fx-background-radius: 10;">
+                           <Slider fx:id="storeMarketSliderMaxPrice" blockIncrement="1.0" prefHeight="14.0" prefWidth="199.0" style="-fx-background-color: #b8c1ec; -fx-background-radius: 10;">
                               <VBox.margin>
                                  <Insets left="5.0" right="5.0" />
                               </VBox.margin>
@@ -75,25 +74,33 @@
                                  <Insets bottom="5.0" top="7.0" />
                               </VBox.margin>
                            </Separator>
-                           <CheckBox fx:id="storeMarketCheckBoxInStock" alignment="TOP_LEFT" mnemonicParsing="false" prefHeight="17.0" prefWidth="204.0" text="In stock" textAlignment="CENTER" textFill="#fffffe">
+                           <Label alignment="TOP_LEFT" prefHeight="17.0" prefWidth="207.0" text="Min quantity" textAlignment="CENTER" textFill="#fffffe">
+                              <font>
+                                 <Font name="Arial" size="12.0" />
+                              </font>
                               <VBox.margin>
                                  <Insets bottom="4.0" left="5.0" right="10.0" />
                               </VBox.margin>
-                              <cursor>
-                                 <Cursor fx:constant="HAND" />
-                              </cursor>
-                           </CheckBox>
-                           <CheckBox fx:id="storeMarketCheckBoxOutOfStock" alignment="TOP_LEFT" mnemonicParsing="false" prefHeight="17.0" prefWidth="193.0" text="Out of stock" textAlignment="CENTER" textFill="#fffffe">
+                           </Label>
+                           <Label fx:id="storeMarketMinQuantityLabel" alignment="TOP_LEFT" prefHeight="17.0" prefWidth="203.0" text="No limit" textAlignment="CENTER" textFill="#fffffe">
+                              <font>
+                                 <Font name="Arial" size="12.0" />
+                              </font>
                               <VBox.margin>
-                                 <Insets left="5.0" right="10.0" />
+                                 <Insets bottom="4.0" left="5.0" right="10.0" />
                               </VBox.margin>
+                           </Label>
+                           <Slider fx:id="storeMarketSliderMinQuantity" blockIncrement="1.0" prefHeight="14.0" prefWidth="199.0" style="-fx-background-color: #b8c1ec; -fx-background-radius: 10;">
                               <cursor>
                                  <Cursor fx:constant="HAND" />
                               </cursor>
-                           </CheckBox>
+                              <VBox.margin>
+                                 <Insets left="5.0" right="5.0" />
+                              </VBox.margin>
+                           </Slider>
                            <Separator prefWidth="200.0" style="-fx-background-color: #b8c1ec;">
                               <VBox.margin>
-                                 <Insets bottom="10.0" top="7.0" />
+                                 <Insets bottom="5.0" top="7.0" />
                               </VBox.margin>
                            </Separator>
                            <Button fx:id="storeMarketSearchButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="218.0" style="-fx-background-color: #eebbc3; -fx-background-radius: 5; -fx-background-insets: 0;" text="Search" textFill="#232946">
@@ -107,7 +114,7 @@
                                  <Cursor fx:constant="HAND" />
                               </cursor>
                            </Button>
-                           <Button fx:id="storeMarketReloadButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="218.0" style="-fx-background-color: #ccbbee; -fx-background-radius: 5; -fx-background-insets: 0;" text="Reload" textFill="#232946">
+                           <Button fx:id="storeMarketResetButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="218.0" style="-fx-background-color: #ccbbee; -fx-background-radius: 5; -fx-background-insets: 0;" text="Reset" textFill="#232946">
                               <font>
                                  <Font name="Arial Black" size="12.0" />
                               </font>
@@ -126,10 +133,13 @@
                          <TableColumn fx:id="storeMarketPriceColumn" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" style="-fx-background-color: #acb6e4;" text="Price" />
                            <TableColumn fx:id="storeMarketQuantityColumn" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" style="-fx-background-color: #b8c1ec;" text="Quantity" />
                        </columns>
+                        <cursor>
+                           <Cursor fx:constant="HAND" />
+                        </cursor>
                      </TableView>
                      <VBox layoutX="708.0" prefHeight="525.0" prefWidth="192.0" style="-fx-background-color: #4b5a90;">
                         <children>
-                           <Label fx:id="storeMarketSelectedProductLabel" alignment="TOP_LEFT" prefHeight="17.0" prefWidth="242.0" text="No product selected" textAlignment="CENTER" textFill="#fffffe">
+                           <Label fx:id="storeMarketSelectedProductLabel" alignment="TOP_LEFT" prefHeight="17.0" prefWidth="177.0" text="No product selected" textAlignment="CENTER" textFill="#fffffe">
                               <font>
                                  <Font name="Arial Black" size="12.0" />
                               </font>
