--- a/src/main/resources/com/vhark/grocerystore/view/store.fxml
+++ b/src/main/resources/com/vhark/grocerystore/view/store.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="900.0" style="-fx-background-color: #232946;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vhark.grocerystore.controller.StoreController">
-   <TabPane prefHeight="550.0" prefWidth="900.0" stylesheets="@../style/tabStyle.css" tabClosingPolicy="UNAVAILABLE">
+   <TabPane prefHeight="550.0" prefWidth="900.0" stylesheets="@../style/marketTabStyle.css" tabClosingPolicy="UNAVAILABLE">
      <tabs>
        <Tab fx:id="storeMarketTabButton" text="Market">
          <content>
